Fixed the visibility in mobile

--- a/styles/components/BookTable/responsive/mobile.scss
+++ b/styles/components/BookTable/responsive/mobile.scss
@@ -1,8 +1,8 @@
 @media screen and (min-width: 320px) {
   .animations_container {
     > div[class*="animation"] {
-      visibility: hidden;
-      opacity: 0;
+      visibility: hidden !important;
+      opacity: 0 !important;
     }
   }
   .heading2 {
