--- a/styles/components/BookTable/responsive/tablet.scss
+++ b/styles/components/BookTable/responsive/tablet.scss
@@ -1,4 +1,10 @@
 @media screen and (min-width: 768px) {
+  .animations_container {
+    > div[class*="animation"] {
+      visibility: visible !important;
+      opacity: 1 !important;
+    }
+  }
   .form {
     width: 750px;
   }
