--- a/styles/components/Statics/global.scss
+++ b/styles/components/Statics/global.scss
@@ -13,21 +13,21 @@
   position: relative;
 }
 
-.animation1 {
+.animation_one {
   position: absolute;
   z-index: 0;
   left: 70px;
   top: 70px;
 }
 
-.animation2 {
+.animation_two {
   position: absolute;
   z-index: 0;
   right: 100px;
   top: 20px;
 }
 
-.animation3 {
+.animation_three {
   position: absolute;
   z-index: 0;
   right: 0px;
