--- a/styles/components/Statics/responsive/laptop.scss
+++ b/styles/components/Statics/responsive/laptop.scss
@@ -1,13 +1,13 @@
 @media screen and (min-width: 993px) {
-  .animation1 {
+  .animation_one {
     left: 0px;
     display: block;
   }
-  .animation2 {
+  .animation_two {
     right: 0px;
     display: block;
   }
-  .animation3 {
+  .animation_three {
     display: block;
   }
   .statics_container {
