--- a/styles/components/Statics/responsive/laptopL.scss
+++ b/styles/components/Statics/responsive/laptopL.scss
@@ -1,8 +1,8 @@
 @media screen and (min-width: 1201px) {
-  .animation1 {
+  .animation_one {
     left: 70px;
   }
-  .animation2 {
+  .animation_two {
     right: 100px;
   }
   .statics_container {
