--- a/styles/components/Statics/responsive/mobile.scss
+++ b/styles/components/Statics/responsive/mobile.scss
@@ -1,11 +1,11 @@
 @media screen and (min-width: 320px) {
-  .animation1 {
+  .animation_one {
     display: none;
   }
-  .animation2 {
+  .animation_two {
     display: none;
   }
-  .animation3 {
+  .animation_three {
     display: none;
   }
   .statics_container {
